# qpp-gcc

./: .gitignore  CMakeLists.txt  README  README.md  TODO.md  features.yaml  hardware_api.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
apps/world_picker/: main.cpp
contrib/: qpp_parse_ir.py
docs/: quantum-dp-1d.md
docs/architecture/: 01-frontend.md  02-runtime.md  03-hardware.md
docs/data-structures/: quantum_containers.md
examples/: CMakeLists.txt  README.md  bell_state.README.md  bell_state.cpp  bell_state.qpp  hardware_api_example.README.md  hardware_api_example.cpp  hardware_api_example.qpp  hardware_demo.README.md  hardware_demo.cpp  hardware_demo.qpp  master_demo.cpp  pbool_demo.README.md  pbool_demo.cpp  pbool_demo.qpp  qpp_parse_example.README.md  qpp_parse_example.cpp  qpp_parse_example.qpp  qstruct_demo.README.md  qstruct_demo.cpp  scheduler_demo.README.md  scheduler_demo.cpp  scheduler_demo.qpp
examples/data-structures-and-algorithms/advanced-graphs/: alien_dictionary.hpp  alien_dictionary.qpp
examples/data-structures-and-algorithms/arrays-and-hashing/: arrays_and_hashing.hpp  arrays_and_hashing.qpp
examples/data-structures-and-algorithms/backtracking/: backtracking.hpp  backtracking.qpp
examples/data-structures-and-algorithms/binary-search/: binary_search.hpp  binary_search.qpp
examples/data-structures-and-algorithms/bit-manipulation/: bit_manipulation.hpp  bit_manipulation.qpp
examples/data-structures-and-algorithms/dynamic-programming-1d/: dynamic_programming.qpp  dynamic_programming_1d.hpp  dynamic_programming_1d.qpp
examples/data-structures-and-algorithms/dynamic-programming-2d/: dynamic_programming_2d.hpp  dynamic_programming_2d.qpp
examples/data-structures-and-algorithms/graph/: graph_problems.hpp  graph_problems.qpp
examples/data-structures-and-algorithms/greedy/: greedy.hpp  greedy.qpp
examples/data-structures-and-algorithms/heap/: README.md  median_finder.hpp  median_finder.qpp
examples/data-structures-and-algorithms/intervals/: intervals.hpp  intervals.qpp
examples/data-structures-and-algorithms/linked-list/: README.md  linked_list_problems.hpp  linked_list_problems.qpp
examples/data-structures-and-algorithms/math-and-geometry/: math_and_geometry.hpp  math_and_geometry.qpp
examples/data-structures-and-algorithms/sliding-window/: sliding_window.hpp  sliding_window.qpp
examples/data-structures-and-algorithms/stack/: stack_problems.hpp  stack_problems.qpp
examples/data-structures-and-algorithms/tree/: tree_problems.hpp  tree_problems.qpp
examples/data-structures-and-algorithms/trie/: trie_problems.hpp  trie_problems.qpp
examples/data-structures-and-algorithms/two-pointers/: two_pointers.hpp  two_pointers.qpp
gcc/: gcc.cc
gcc/c-family/: cppspec.cc
gcc/config/: darwin.h
gcc/cp/: lang-specs.h
gcc/doc/: invoke.texi
include/qpp/: cstruct.hpp  entangled_map  entangled_set  hardware.hpp  hardware_stub.hpp  initial_mapper.hpp  pbool.h  qarray  qint  qregister.hpp  qstruct.hpp  quantum_dp.hpp  qvector  scheduler.hpp
include/qpp/api/: Circuit.hpp  Program.hpp  README.md  Sampler.hpp
include/qpp/backend/: Backend.hpp  Factory.hpp  LocalSimBackend.hpp  QPUBackend.hpp  notifications.hpp
include/qpp/detail/: quantum_container_bookkeeping.hpp
include/qpp/quantum/: state.hpp
include/qpp/sim/: Characters.hpp  Compactification.hpp  Encodings.hpp  FFT.hpp  PeriodFinding.hpp  StateVector.hpp  WaveBuffer.hpp
qpp/: graph_algorithms.cpp  graph_examples.hpp  quantum_worlds.cpp  quantum_worlds.hpp
qpp/backend/: CMakeLists.txt  LocalSimBackend.cpp  QPUBackend.cpp
qpp/quantum/: backend.cpp  backend.hpp  quantum_heap.cpp  quantum_heap.hpp
qpp/sim/: Gates.hpp  Grover.hpp  StateVector.hpp
qpp/tests/: test_sim_algorithms.py
src/: compiler.cpp  compiler.hpp  main.cpp
tests/: CMakeLists.txt  test_dynamic_programming_quantum.cpp  test_hardware_api.py  test_master_demo.py  test_periodicity.py  test_qpp.py  test_qpu_backend.cpp  test_worlds.cpp  testing_framework.cpp  testing_framework.hpp  worlds_tests.cpp
tests/gtest/: gtest.h
